# TRS-80

./: .classpath  .cproject  .firebaserc  .gitattributes  .gitignore  .gitmodules  .project  AndroidManifest.xml  LICENSE  README  README.md  build.gradle  firebase.json  gradle.properties  project.properties  settings.gradle
.github/workflows/: build-with-gradle.yml
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/c/: CMakeLists.txt  atrs.h  crc.c  error.c  load_cmd.h  native.c  opensl.h  trs.h  trs_cassette.c  trs_disk.c  trs_hard.c  trs_interrupt.c  trs_io.c  trs_iodefs.h  trs_memory.c  trs_mkdisk.c  trs_mkdisk.h  trs_printer.c  trs_rom3.c  trs_sdl_interface.c  trs_sdl_keyboard.c  trs_state_save.c  trs_state_save.h  trs_uart.h  trs_xray_state_save.cpp  trs_xray_state_save.h  trsio-wrapper.cpp  trsio-wrapper.h  z80.c  z80.h
app/src/main/c/SDL/: SDL.c  SDL.h  SDL_keyboard.c
app/src/main/c/proto/: system_state.pb.cc  system_state.pb.h
app/src/main/c/retrostore/: loader_basic.c  loader_cmd.c  rsclient.c
app/src/main/c/retrostore/include/: utils.h
app/src/main/c/rfm/: basic.h  err.h  fornext.c  fornext.h  func.c  func.h  key.c  key.h  lincon.c  peekpoke.c  peekpoke.h  rfm.c  run.c  run.h  trs_io.c  trs_io.h  trs_scrn.c  trs_scrn.h  trs_str.c  trs_str.h
app/src/main/c/tcpip/: tcpip.cpp
app/src/main/c/trs-io/: core.cpp
app/src/main/jni/: Android.mk  Application.mk  atrs.h  load_cmd.c  main.c  native.c  trs.h  trs_cassette.c  trs_chars.c  trs_hard.h  trs_imp_exp.c  trs_interrupt.c  trs_io.c  trs_sdl_interface.c  trs_sdl_keyboard.c  trs_sdl_keyboard.h
app/src/main/jni/SDL/: SDL.c  SDL_video.h
app/src/main/proto/: system_state.proto
app/src/main/res/anim/: no_animation.xml
app/src/main/res/drawable/: border.xml  cancel_icon.xml  community_icon.xml  configure_item_background.xml  download_icon.xml  eject_icon.xml  file_icon.xml  file_icon_black.xml  folder_icon.xml  help_icon.xml  ic_info_black.xml  ic_shopping_cart_black_24dp.xml  key_background.xml  rate_icon.xml  settings_icon.xml  share_icon.xml  side_nav_bar.xml  splash_background.xml
app/src/main/res/layout/: alert_dialog.xml  configuration_footer.xml  configuration_header.xml  configuration_item.xml  emulator.xml  emulator_measure.xml  file_browser.xml  file_browser_item.xml  keyboard_compact.xml  keyboard_joystick.xml  keyboard_original.xml  keyboard_tilt.xml  main_activity.xml  market.xml  market_app_view.xml  nav_header_main.xml  request_permission.xml  tutorial.xml
app/src/main/res/layout-land/: emulator.xml
app/src/main/res/layout-normal-land/: configuration_item.xml
app/src/main/res/layout-w500dp/: configuration_item.xml
app/src/main/res/menu/: activity_main_drawer.xml  common.xml  main.xml  market.xml  menu_create_media.xml
app/src/main/res/raw/: ormlite_config.txt
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-land/: dimens.xml
app/src/main/res/values-land-v21/: styles.xml
app/src/main/res/values-normal-land/: dimens.xml
appstore/: build.gradle
appstore/src/main/webapp/: index.html
buildSrc/: .gitignore  build.gradle
buildSrc/gradle/wrapper/: gradle-wrapper.properties
etc/: rsync-www.sh  update-support-libraries.sh  upload-receiver-app.sh
gradle/wrapper/: gradle-wrapper.properties
jni/: Android.mk  Application.mk  SDL_emu.c  SDL_emu.h  atrs.h  blit.c  blit.h  debug.c  dis.c  load_cmd.h  load_hex.c  main.c  native.c  opensl.c  reed.h  trs.h  trs_cassette.c  trs_cassette.h  trs_disk.c  trs_disk.h  trs_hard.c  trs_hard.h  trs_imp_exp.c  trs_imp_exp.h  trs_interrupt.c  trs_io.c  trs_iodefs.h  trs_keyboard.c  trs_memory.c  trs_printer.c  trs_rom1.c  trs_rom4p.c  trs_sdl_interface.c  trs_sdl_keyboard.h  trs_state_save.c  trs_state_save.h  trs_uart.c  trs_ui.c  trs_xinterface.c  z80.c  (+1 more)
jni/SDL/: SDL.c  SDL.h  SDL_config.h
libs/: .gitignore
models/: build.gradle  proguard-rules.pro
models/src/main/: AndroidManifest.xml
res/drawable/: key_background.xml
res/layout/: activity_main.xml  alert_dialog.xml  configuration_item.xml  configuration_popup.xml  configurations.xml  emulator.xml  emulator_status.xml  file_browser.xml  help.xml  help_configurations.xml  help_edit_configuration.xml  help_emulator.xml  help_settings.xml  hint_keyboard_joystick.xml  hint_keyboard_tilt.xml  initial_setup.xml  initialization_error.xml  keyboard_compact.xml  keyboard_default.xml  keyboard_gaming.xml  keyboard_gaming_1.xml  keyboard_gaming_2.xml  keyboard_joystick.xml  keyboard_original.xml  main_activity.xml  no_configurations.xml
res/layout-land/: emulator.xml  main_activity.xml
res/layout-ldpi/: emulator_status.xml
res/menu/: activity_main.xml  main.xml
res/values/: arrays.xml  attrs.xml  colors.xml  strings.xml
res/xml/: configuration.xml  keymap_model3.xml  settings.xml
retrostore/: build.gradle  proguard-rules.pro
retrostore/src/main/: AndroidManifest.xml
src/org/puder/trs80/: ACRAPostSender.java  Audio.java  AudioHttpServer.java  CMD.java  CastMessageSender.java  CharMapping.java  Configuration.java  ConfigurationActivity.java  ConfigurationBackup.java  ConfigurationListViewAdapter.java  ConfigurationsFragment.java  EditConfigurationActivity.java  EditConfigurationFragment.java  EmulatorActivity.java  EmulatorState.java  EmulatorStatusFragment.java  Fonts.java  Hardware.java  InitialSetupDialogFragment.java  Joystick.java  JoystickHorizontal.java  JoystickRound.java  JoystickVertical.java  Key.java  Keyboard.java  MainActivity.java  MainFragment.java  Memory.java  Model1.java  Model3.java  NotImplementedException.java  ROMs.java  RenderThread.java  Screen.java  ScreenshotView.java  SettingsActivity.java  SettingsFragment.java  TRS80Application.java  TypefaceCache.java  XTRS.java  (+1 more)
tools/tpk/: build.gradle  settings.gradle
tools/tpk/demo/: disk-donkey-kong.dsk  disk-eliminator.dsk  disk-sea-dragon.dsk  gen-tpk.sh
tools/tpk/gradle/wrapper/: gradle-wrapper.properties
tpk/: build.gradle
tpk-base/demo/: gen-tpk.sh
var/googlecast-receiver/: receiver.html
var/icons/: TRS80-Logo.psd
var/rom/: model3.rom
(+174 files in other folders)
